updated home page and landing page for t&c

--- a/Views/Bookings/TermsNCond.cshtml
+++ b/Views/Bookings/TermsNCond.cshtml
@@ -121,7 +121,7 @@
                     <p>If you have any questions about these Terms and Conditions, please contact us at:</p>
                     <ul>
                         <li><u>Email:</u> quickfix@gmail.com</li>
-                        <li><u>Phone:</u> [Contact Number]</li>
+                        @* <li><u>Phone:</u> [Contact Number]</li> *@
                     </ul>
                 </div>
             </div>
